content and review styled with flex

--- a/project2/index.html
+++ b/project2/index.html
@@ -85,7 +85,7 @@
                             <img src="images/hotel-3.jpg" alt="Photo of hotel 3" class="gallery__photo">
                         </figure>
                     </div>
-                    <div class="overview">
+                    <!-- <div class="overview">
                         <h1 class="overview__heading">
                             Hotel Las Palmas
                         </h1>
@@ -117,9 +117,41 @@
                                 <use xlink:href="images/sprite.svg#icon-location-pin" />
                             </svg>
                         </div>
+                    </div> -->
+                    <div class="overview">
+                        <h1 class="overview__heading">
+                            Hotel Las Palmas
+                        </h1>
+                        <div class="overview__starts">
+                            <svg class="overview__icon-star">
+                                <use xlink:href="images/sprite.svg#icon-star" />
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="images/sprite.svg#icon-star" />
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="images/sprite.svg#icon-star" />
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="images/sprite.svg#icon-star" />
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="images/sprite.svg#icon-star" />
+                            </svg>
+                        </div>
+                        <div class="overview__location">
+                            <svg class="overview__icon-location">
+                                <use xlink:href="images/sprite.svg#icon-location-pin" />
+                            </svg>
+                        </div>
+                        <button class="btn-inline">Albufeira, Portugal</button>
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">429 votes</div>
+                        </div>
+
                     </div>
-                    <div class="detail row">
-                        <div class="col-3-of-5">
+                    <div class="detail">
                             <div class="description">
                                 <p class="paragraph">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deserunt, vero aspernatur esse quod, minima, odit minus corrupti veritatis quisquam unde illum?
@@ -127,7 +159,7 @@
                                 <p class="paragraph">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deserunt, vero aspernatur esse quod.
                                 </p>
-                                <ul class="list">
+                                <!-- <ul class="list">
                                     <li class="list__item">Close to the beach</li>
                                     <li class="list__item">Free airport shuttle</li>
                                     <li class="list__item">Air conditioning and heating</li>
@@ -136,7 +168,17 @@
                                     <li class="list__item">Free wifi in all rooms</li>
                                     <li class="list__item">Pets allowed</li>
                                     <li class="list__item">Perfect for families</li>
-                                </ul>
+                                </ul> -->
+                                <ul class="list">
+                                    <li class="list__item">Close to the beach</li>
+                                    <li class="list__item">Breakfast included</li>
+                                    <li class="list__item">Free airport shuttle</li>
+                                    <li class="list__item">Free wifi in all rooms</li>
+                                    <li class="list__item">Air conditioning and heating</li>
+                                    <li class="list__item">Pets allowed</li>
+                                    <li class="list__item">We speak all languages</li>
+                                    <li class="list__item">Perfect for families</li>
+                                    </ul>
                                 <div class="recommend">
                                     <p class="recommend__count">
                                         Lucy and 3 other friends recommend this hotel.
@@ -146,12 +188,9 @@
                                         <img src="images/user-4.jpg" alt="Friend 2" class="recommend__photo">
                                         <img src="images/user-5.jpg" alt="Friend 3" class="recommend__photo">
                                         <img src="images/user-6.jpg" alt="Friend 4" class="recommend__photo">
-    
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-2-of-5">
                             <div class="user-reviews">
                                 <figure class="review">
                                     <blockquote class="review__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nesciunt odio voluptate aperiam ratione distinctio.</blockquote>
@@ -177,7 +216,6 @@
                                 </figure>
                                 <button class="btn-inline">Show all<span>&rarr;</span></button>
                             </div>
-                        </div>
                     </div>
                 </main>
             </div>
